--- a/App/App.csproj
+++ b/App/App.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ExtCore.Data.EntityFramework.Sqlite" Version="5.1.0" />
-    <PackageReference Include="Magicalizer.Api" Version="1.0.0-alpha1" />
-    <PackageReference Include="Magicalizer.Data.Repositories.EntityFramework" Version="1.0.0-alpha1" />
-    <PackageReference Include="Magicalizer.Domain.Services.Defaults" Version="1.0.0-alpha1" />
+    <PackageReference Include="ExtCore.Data.EntityFramework.Sqlite" Version="6.0.0" />
+    <PackageReference Include="Magicalizer.Api" Version="1.1.0" />
+    <PackageReference Include="Magicalizer.Data.Repositories.EntityFramework" Version="1.1.0" />
+    <PackageReference Include="Magicalizer.Domain.Services.Defaults" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
