Updated to Magicalizer 5

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ExtCore.Data.EntityFramework.Sqlite" Version="9.0.0" />
-    <PackageReference Include="Magicalizer.Api" Version="4.0.0" />
-    <PackageReference Include="Magicalizer.Data.Repositories.EntityFramework" Version="4.0.0" />
-    <PackageReference Include="Magicalizer.Domain.Services.Defaults" Version="4.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
+    <PackageReference Include="Magicalizer" Version="5.0.0-alpha1" />
   </ItemGroup>
 
 </Project>
